--- a/hybrid-app/class-web/src/app/globals.css
+++ b/hybrid-app/class-web/src/app/globals.css
@@ -40,3 +40,61 @@ body {
     text-wrap: balance;
   }
 }
+
+/* 09-01-view-transition 수업에서 페이지 이동 애니메이션 추가! */
+@keyframes 이동하기_이전페이지 {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+
+@keyframes 이동하기_다음페이지 {
+  from {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+html::view-transition-old(root) {
+  animation: 이동하기_이전페이지 0.2s;
+}
+
+html::view-transition-new(root) {
+  animation: 이동하기_다음페이지 0.5s;
+}
+
+@keyframes 뒤로가기_이전페이지 {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
+@keyframes 뒤로가기_다음페이지 {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* html에 뒤로가기라는 클래스가 있는 경우 적용 처리 */
+html.뒤로가기::view-transition-old(root) {
+  animation-name: 뒤로가기_이전페이지;
+  animation-duration: 0.5s;
+}
+
+html.뒤로가기::view-transition-new(root) {
+  animation-name: 뒤로가기_다음페이지;
+  animation-duration: 0.2s;
+}
